--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.0.1",
   "author": "Juan Delgadillo <j.mnuelh@gmail.com> (https://github.com/JuanDelgadillo)",
   "description": "Nativescript plugin that lets you handling your Nativescript tests like the angular style guide",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JuanDelgadillo/nativescript-tests-hook"
+  },
+  "bugs": {
+    "url": "https://github.com/JuanDelgadillo/nativescript-tests-hook/issues"
+  },
   "nativescript": {
     "platforms": {
       "android": "2.4.1",
@@ -32,6 +39,8 @@
     "Angular",
     "Tests"
   ],
+  "preferGlobal": false,
+  "private": false,
   "license": "MIT",
   "dependencies": {
     "del": "^2.2.0",
